--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -44,11 +44,11 @@
 :root {
    --background: oklch(0.2 0 0);
    --foreground: oklch(0.985 0 0);
-   --card: oklch(0.205 0 0);
+   --card: oklch(0.23 0 0);
    --card-foreground: oklch(0.985 0 0);
    --popover: oklch(0.205 0 0);
    --popover-foreground: oklch(0.985 0 0);
-   --primary: oklch(0.922 0 0);
+   --primary: oklch(0.59 0.13 232.62);
    --primary-foreground: oklch(0.205 0 0);
    --secondary: oklch(0.269 0 0);
    --secondary-foreground: oklch(0.985 0 0);
@@ -73,6 +73,7 @@
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.556 0 0);
+   --radius: 0.5rem;
 }
 
 @layer base {
